# ustring

./: .gitignore  README.md  ustring.cpp  ustring.h
inc/: ustring.h
src/: ustring.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_capacity.cpp  test_copy_semantics.cpp  test_edge_cases.cpp  test_element_access.cpp  test_modifiers.cpp  test_operators.cpp  test_single_heap.cpp  ustring_test_conf.h  ustring_test_config.h
